// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v0.15.0-rc.5 darwin

export GIT_PARAMS=\\"$*\\"

hookname=\`basename \\"$0\\"\`

if [ -f package.json ] && cat package.json | grep -q \\"\\\\\\"$hookname\\\\\\"[[:space:]]*:\\"; then
  node_modules/run-node/run-node ./node_modules/husky/lib/runner/bin $hookname
  exit $?
fi 
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v0.15.0-rc.5 win32

export GIT_PARAMS=\\"$*\\"

hookname=\`basename \\"$0\\"\`

if [ -f package.json ] && cat package.json | grep -q \\"\\\\\\"$hookname\\\\\\"[[:space:]]*:\\"; then
  node ./node_modules/husky/lib/runner/bin $hookname
  exit $?
fi 
"
`;
